k8s-manifests/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-backend
  namespace: default
  labels:
    app.kubernetes.io/name: fortune-backend
    app.kubernetes.io/instance: fortune-cookie
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: fortune-cookie
    app.kubernetes.io/version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: fortune-cookie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fortune-backend
        app.kubernetes.io/instance: fortune-cookie
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: fortune-cookie
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
      - name: fortune-backend
        image: rafaelvzago/fortune-backend-rust:1.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /fortune
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /fortune
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
          failureThreshold: 3
