k8s-manifests/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-frontend
  namespace: default
  labels:
    app.kubernetes.io/name: fortune-frontend
    app.kubernetes.io/instance: fortune-cookie
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: fortune-cookie
    app.kubernetes.io/version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: fortune-cookie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fortune-frontend
        app.kubernetes.io/instance: fortune-cookie
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: fortune-cookie
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
      - name: fortune-frontend
        image: rafaelvzago/fortune-frontend:1.0
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 20
          failureThreshold: 3
